tests/e2e/function_not_declared_nested.error
Error: syntax error in story at line 1, column 69

1|    b = my_service command p0: my_func(k1: (another_service command p1: random()) k2: 2) p2: 2
                                                                          ^^^^^^

E0112: Function `random` has not been declared
