tests/e2e/function_not_declared_nested.story
b = my_service command p0: my_func(k1: (another_service command p1: random()) k2: 2) p2: 2
